--- a/NugetDependencyAnalysis/NugetDependencyAnalysis.csproj
+++ b/NugetDependencyAnalysis/NugetDependencyAnalysis.csproj
@@ -48,10 +48,16 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileReading\FileReader.cs" />
+    <Compile Include="FileReading\IFileReader.cs" />
+    <Compile Include="NugetPackage.cs" />
     <Compile Include="PackagesConfig.cs" />
     <Compile Include="PackagesConfigFinder.cs" />
+    <Compile Include="PackagesConfigParser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
