--- a/NugetDependencyAnalysisTests/NugetDependencyAnalysisTests.csproj
+++ b/NugetDependencyAnalysisTests/NugetDependencyAnalysisTests.csproj
@@ -72,6 +72,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="PackagesConfigFinderTests.cs" />
+    <Compile Include="PackagesConfigParserTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
