--- a/NugetDependencyAnalysis/NugetDependencyAnalysis.csproj
+++ b/NugetDependencyAnalysis/NugetDependencyAnalysis.csproj
@@ -52,12 +52,12 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FileReading\FileReader.cs" />
-    <Compile Include="FileReading\IFileReader.cs" />
-    <Compile Include="NugetPackage.cs" />
-    <Compile Include="PackagesConfigFile.cs" />
-    <Compile Include="PackagesConfigFinder.cs" />
-    <Compile Include="PackagesConfigParser.cs" />
+    <Compile Include="Parsing\FileReading\FileReader.cs" />
+    <Compile Include="Parsing\FileReading\IFileReader.cs" />
+    <Compile Include="Parsing\NugetPackage.cs" />
+    <Compile Include="Finding\PackagesConfigFile.cs" />
+    <Compile Include="Finding\PackagesConfigFinder.cs" />
+    <Compile Include="Parsing\PackagesConfigParser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
