--- a/NugetDependencyAnalysis/packages.config
+++ b/NugetDependencyAnalysis/packages.config
@@ -3,4 +3,5 @@
   <package id="Serilog" version="2.5.0" targetFramework="net462" />
   <package id="Serilog.Sinks.ColoredConsole" version="3.0.1" targetFramework="net462" />
   <package id="Serilog.Sinks.Console" version="3.0.1" targetFramework="net462" />
+  <package id="System.ValueTuple" version="4.3.1" targetFramework="net462" />
 </packages>
