--- a/NugetDependencyAnalysisTests/NugetDependencyAnalysisTests.csproj
+++ b/NugetDependencyAnalysisTests/NugetDependencyAnalysisTests.csproj
@@ -71,6 +71,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Comparing\ProjectsNugetsComparerTests.cs" />
     <Compile Include="Finding\PackagesConfigFinderTests.cs" />
     <Compile Include="Parsing\PackagesConfigParserTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
