--- a/NugetDependencyAnalysis/NugetDependencyAnalysis.csproj
+++ b/NugetDependencyAnalysis/NugetDependencyAnalysis.csproj
@@ -55,7 +55,9 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Comparing\NugetDifferences.cs" />
     <Compile Include="Comparing\ProjectsNugetsComparer.cs" />
+    <Compile Include="Comparing\VersionProjectsGrouping.cs" />
     <Compile Include="Parsing\FileReading\FileReader.cs" />
     <Compile Include="Parsing\FileReading\IFileReader.cs" />
     <Compile Include="Parsing\NugetPackage.cs" />
